# tensorflow-example-encoder

./: CMakeLists.txt  README.md
benchmark/: .gitignore  benchmark.sh  cpp-protobuf-encoder.cc  cpp-protobuf-encoder.pb  native-tensorflow-encode.py  python-protobuf-encoder.py
benchmark/custom-protobuf-encoder/: CMakeLists.txt  custom-protobuf-encoder.cpp
src/: main.cpp
